language/move-lang/tests/move_check/typing/assign_unpack_references.exp
error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/typing/assign_unpack_references.move:20:14
   │
 3 │     struct R { s1: S, s2: S }
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
17 │         R { s1: S { f }, s2 } = &R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
   │                                  ------------------------------
   │                                  │
   │                                  The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   │                                  The type '0x8675309::M::R' does not have the ability 'drop'
   ·
20 │         f; s2;
   │              ^ Invalid return

error[E06001]: unused value without 'drop'
   ┌─ tests/move_check/typing/assign_unpack_references.move:30:14
   │
 3 │     struct R { s1: S, s2: S }
   │            - To satisfy the constraint, the 'drop' ability would need to be added here
   ·
27 │         R { s1: S { f }, s2 } = &mut R { s1: S{f: 0}, s2: S{f: 1} }; f; s2;
   │                                      ------------------------------
   │                                      │
   │                                      The value is created but not used. The value does not have the 'drop' ability and must be consumed before the function returns
   │                                      The type '0x8675309::M::R' does not have the ability 'drop'
   ·
30 │         f; s2;
   │              ^ Invalid return

